[package]
name = "d3d9-hook-imgui-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "injector"
path = "src/bin/injector.rs"

[dependencies]
hudhook = "0.8"
imgui = "0.12"
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }
